kubernetes/services/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-external
spec:
  type: ExternalName
  externalName: java-app.default.svc.cluster.local
